--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
   text-transform: uppercase;
   overflow: hidden;
   transition: .5s;
-  margin-top: 40px;
+  margin-top: 50px;
   letter-spacing: 4px
 }
 
@@ -147,4 +147,17 @@
   50%,100% {
     bottom: 100%;
   }
+}
+.happy{
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #ff989c;
+  font-size: 28px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 400px;
+  letter-spacing: 4px
 }
