--- a/style.css
+++ b/style.css
@@ -1,48 +1,34 @@
+body{
+	margin: 0 auto;
+	padding: 0;
+}
+header{
+	background-image: url("img_header.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	height: 276px;
+	margin: 0 auto;
+	padding: 0;
+}
 @media (min-width: 320px) and (max-width: 576px)  {
- .one_img{
-    height: 130px;
-    width: 130px;
- }
- .four_img{
-    height: 130px;
-    width: 150px;
- }
- .four_pic{
-   transform: rotate(30deg);
-   top: 30px !important;
-   left: 150px !important;
- }
-.five_img{
-   height: 130px;
-    width: 150px;
-}
-.five_pic{
-   top: 30px !important;
-   left: 10px !important;
-}
-.one_pic{
-   top: 214px !important;
-   left: 16px !important;
-   transform: rotate(-130deg) !important;
-}
-.three_img{
-   height: 130px;
-    width: 140px;
-}
-.three_pic{
-   transform: rotate(160deg) !important;
-   top: 228px !important;
-   left: 150px !important;
-}
-.two_pic{
-   top: 140px !important;
-   left: 240px !important;
-   transform: rotate(90deg) !important;
-}
-.login-box {
+	header{
+	background-size: contain;
+	}
+	.happy_txt{
+		color: #f3dcf4;
+		font-family: Courier New, monospace;
+		font-size: 23px;
+		padding: 30px;
+	}
+	p{
+		margin: 0;
+		padding: 0;
+	}
+	.login-box {
   position: absolute;
   top: 10%;
-  left: 10%;
+  left: 18%;
   width: 100px;
   padding: 40px;
 }
@@ -50,7 +36,7 @@
   position: relative;
   display: inline-block;
   padding: 10px 20px;
-  color: #ff989c;
+  color: #f3dcf4;
   font-size: 16px;
   text-decoration: none;
   text-transform: uppercase;
@@ -61,13 +47,13 @@
 }
 
 .login-box a:hover {
-  background: #ff989c;
+  background: #f3dcf4;
   color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 5px #ff989c,
-              0 0 25px #ff989c,
-              0 0 50px #ff989c,
-              0 0 100px #ff989c;
+  box-shadow: 0 0 5px #f3dcf4,
+              0 0 25px #f3dcf4,
+              0 0 50px #f3dcf4,
+              0 0 100px #f3dcf4;
 }
 
 .login-box a span {
@@ -80,7 +66,7 @@
   left: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg, transparent, #ff989c);
+  background: linear-gradient(90deg, transparent, #f3dcf4);
   animation: btn-anim1 1s linear infinite;
 }
 @keyframes btn-anim1 {
@@ -97,7 +83,7 @@
   right: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(180deg, transparent, #ff989c);
+  background: linear-gradient(180deg, transparent, #f3dcf4);
   animation: btn-anim2 1s linear infinite;
   animation-delay: .25s
 }
@@ -116,7 +102,7 @@
   right: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(270deg, transparent, #ff989c);
+  background: linear-gradient(270deg, transparent, #f3dcf4);
   animation: btn-anim3 1s linear infinite;
   animation-delay: .5s
 }
@@ -135,7 +121,7 @@
   left: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(360deg, transparent, #ff989c);
+  background: linear-gradient(360deg, transparent, #f3dcf4);
   animation: btn-anim4 1s linear infinite;
   animation-delay: .75s
 }
@@ -148,16 +134,96 @@
     bottom: 100%;
   }
 }
-.happy{
-  position: relative;
-  display: inline-block;
-  padding: 10px 20px;
-  color: #ff989c;
-  font-size: 28px;
-  text-decoration: none;
-  text-transform: uppercase;
-  overflow: hidden;
-  transition: .5s;
-  margin-top: 400px;
-  letter-spacing: 4px
+	section{
+		background-color: #d1d1d1ab;
+		width: 100%;
+
+	}
+	.one_cvet{
+		padding: 20px;
+	}
+	.one_cvet {
+	position: absolute;
+	width: 200px;
+	height: 300px;
+	background-size: cover;
+	/*Устанавливаем время и имя анимации*/
+	-webkit-animation-duration: 5s;
+	animation-duration: 5s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+	}
+	@-webkit-keyframes fadeIn {
+	0% {opacity: 0;}
+	100% {opacity: 1;}
+	}
+	@keyframes fadeIn {
+	0% {opacity: 0;}
+	100% {opacity: 1;}
+	}
+	.one_pic p{
+		color: #535853;
+		position: absolute;
+	width: 160px;
+	height: 300px;
+	margin-left: 230px;
+	margin-top: 90px;
+	background-size: cover;
+	/*Устанавливаем время и имя анимации*/
+	-webkit-animation-duration: 5s;
+	animation-duration: 5s;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn2;
+	}
+	@-webkit-keyframes fadeIn2 {
+	0% {opacity: 0;}
+	100% {opacity: 1;}
+	}
+	@keyframes fadeIn2 {
+	0% {opacity: 0;}
+	100% {opacity: 1;}
+	}
+	.two_pick{
+		height: 1000px;
+	}
+	.two_cvet{
+		margin-top: 370px;
+		margin-left: 130px;
+
+	}
+	.vl {
+		z-index: -1;
+		margin-top: -680px;
+		margin-left: 80px;
+		position: relative;
+	    border-left: 3px solid #000000;
+	    height: 330px;
+	}
+	.line {
+		z-index: 0;
+    border-bottom: 3px solid #0000006e; 
+    width: 80%;
+    margin-left: 80px;
+   }
+   .two_pick p{
+   	margin-left:200px;
+   	color: #00000099;
+   }
+   .three_pick{
+   	padding: 30px;
+   	height: 500px;
+   }
+   .three_pick p{
+   	height: 300px;
+   	font-size: 23px;
+   	position: absolute;
+   	color: #00000099;
+   	top: 1050px;
+   	left: 320px;
+  writing-mode: vertical-rl;
+	}
 }
