--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header{
 	background-image: url("img_header.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
-	width: 100%;
+	width: 100vh;
 	height: 276px;
 	margin: 0 auto;
 	padding: 0;
