--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 body{
 	margin: 0 auto;
 	padding: 0;
-	background-color:#d1d1d1ab ;
 }
 header{
 	background-image: url("img_header.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
-	width: 100vh;
-	height: 276px;
+	width: 100%;
+	height: 260px;
 	margin: 0 auto;
 	padding: 0;
 }
@@ -216,7 +215,7 @@ header{
    }
    .three_pick{
    	padding: 30px;
-   	height: 360px;
+   	height: 500px;
    }
    .three_pick p{
    	height: 300px;
