--- a/style.css
+++ b/style.css
@@ -203,6 +203,14 @@ header{
 	    border-left: 3px solid #000000;
 	    height: 330px;
 	}
+	.vl2 {
+		z-index: -1;
+		top: 108%;
+		left: 60%;
+		position: absolute;
+	    border-left: 3px solid #000000;
+	    height: 33px;
+	}
 	.line {
 		z-index: 0;
     border-bottom: 3px solid #0000006e; 
@@ -215,7 +223,7 @@ header{
    }
    .three_pick{
    	padding: 30px;
-   	height: 500px;
+   	height: 230px;
    }
    .three_pick p{
    	height: 300px;
@@ -226,4 +234,33 @@ header{
    	left: 320px;
   writing-mode: vertical-rl;
 	}
+	.four{
+   	padding: 20px;
+   	padding-left: 30px;
+   	height: 235px;
+   }
+   .vl3 {
+		z-index: -1;
+		top: 141%;
+		left: 50%;
+		position: absolute;
+	    border-left: 1px solid #000000;
+	    height: 287px;
+	}
+	.four_text{
+		width: 150px;
+		color: #00000099;
+	}
+	.line2 {
+		z-index: 0;
+    border-bottom: 1px solid #0000006e; 
+    width: 50%;
+    position: absolute;
+    left: 50%;
+   }
+   .five_cvet{
+   	position: absolute;
+   	left: 52%;
+   	top: 147%;
+   }
 }
