--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ header{
 	}
 	.vl2 {
 		z-index: -1;
-		top: 108%;
+		top: 102%;
 		left: 60%;
 		position: absolute;
 	    border-left: 3px solid #000000;
@@ -238,10 +238,11 @@ header{
    	padding: 20px;
    	padding-left: 30px;
    	height: 235px;
+   	display: flex;
    }
    .vl3 {
 		z-index: -1;
-		top: 141%;
+		top: 133%;
 		left: 50%;
 		position: absolute;
 	    border-left: 1px solid #000000;
@@ -259,8 +260,9 @@ header{
     left: 50%;
    }
    .five_cvet{
-   	position: absolute;
-   	left: 52%;
-   	top: 147%;
+   	position: relative;
+   	left: 22%;
+   	top: 10%
+
    }
 }
