--- a/style.css
+++ b/style.css
@@ -203,14 +203,7 @@ header{
 	    border-left: 3px solid #000000;
 	    height: 330px;
 	}
-	.vl2 {
-		z-index: -1;
-		top: 102%;
-		left: 60%;
-		position: absolute;
-	    border-left: 3px solid #000000;
-	    height: 33px;
-	}
+
 	.line {
 		z-index: 0;
     border-bottom: 3px solid #0000006e; 
@@ -242,9 +235,9 @@ header{
    }
    .vl3 {
 		z-index: -1;
-		top: 133%;
+		top: -14%;
 		left: 50%;
-		position: absolute;
+		position: relative;
 	    border-left: 1px solid #000000;
 	    height: 287px;
 	}
@@ -255,14 +248,13 @@ header{
 	.line2 {
 		z-index: 0;
     border-bottom: 1px solid #0000006e; 
-    width: 50%;
+    width: 49%;
     position: absolute;
-    left: 50%;
+    left: 51%;
    }
    .five_cvet{
-   	position: relative;
-   	left: 22%;
-   	top: 10%
+   	padding-left: 40px;
+   	padding-top: 20px;
 
    }
 }
