--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 header{
 	background-image: url("img_header.jpg");
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: cover !important;
 	width: 100%;
 	height: 260px;
 	margin: 0 auto;
